--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2026 Romain Brault <mail@romainbrault.com>
+# SPDX-FileCopyrightText: © 2026 Romain Brault <mail@romainbrault.com>
 #
 # SPDX-License-Identifier: MIT OR Apache-2.0
 
@@ -21,7 +21,6 @@ license-files = [
     "LICENSES/MIT.txt",
     "LICENSES/Apache-2.0.txt",
 ]
-
 maintainers = [
     { name = "Romain Brault", email = "mail@romainbrault.com" },
 ]
@@ -53,6 +52,15 @@ dependencies = [
     "distro>=1.9.0",
     "typing-extensions>=4.12.2; python_full_version<'3.12'",
 ]
+
+urls.changelog = "https://github.com/whiteprints-tests/test-gh-rtd-mit-or-apache-2-0-macos-310/releases"
+urls.discussions = "https://github.com/whiteprints-tests/test-gh-rtd-mit-or-apache-2-0-macos-310/discussions"
+urls.documentation = "https://github.com/whiteprints-tests/test-gh-rtd-mit-or-apache-2-0-macos-310"
+urls.download = "https://github.com/whiteprints-tests/test-gh-rtd-mit-or-apache-2-0-macos-310/releases"
+urls.homepage = "https://github.com/whiteprints-tests/test-gh-rtd-mit-or-apache-2-0-macos-310"
+urls.integration = "https://github.com/whiteprints-tests/test-gh-rtd-mit-or-apache-2-0-macos-310/actions"
+urls.issues = "https://github.com/whiteprints-tests/test-gh-rtd-mit-or-apache-2-0-macos-310/issues"
+urls.repository = "https://github.com/whiteprints-tests/test-gh-rtd-mit-or-apache-2-0-macos-310"
 
 [dependency-groups]
 dev = [
